<resources>
    <string name="app_name">Wallto</string>
    <string name="auth">Авторизация</string>
    <string name="create_new">Создать новый аккаунт</string>
    <string name="start_screen_desc">Уберечь свои деньги стоит больших трудов, чем добыть их</string>
    <string name="nav_home">Главная</string>
    <string name="nav_wallets">Счета</string>
    <string name="nav_charts">Курсы</string>
    <string name="nav_settings">Настройки</string>
    <string name="hint_login">Введите логин</string>
    <string name="hint_password">Введите пароль</string>
    <string name="send">Отправить</string>
    <string name="auth2">Войти</string>
    <string name="auth3">Войти в аккаунт</string>
    <string name="go_back">Назад</string>
    <string name="login">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="password2">Повторите пароль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="stg_protect">Защита приложения</string>
    <string name="stg_pinenter">Вход по ПИН-коду</string>
    <string name="stg_finger">Использовать отпечаток</string>
    <string name="stg_changepin">Изменить ПИН-код</string>
    <string name="stg_data">Данные</string>
    <string name="stg_login">Статус</string>
    <string name="stg_mail">Почта</string>
    <string name="net_error">Возникли проблемы с подключением. Убедитесь, что вы имеете доступ к сети.</string>
    <string name="btn_logout">Выйти</string>
    <string name="btn_support">Помощь</string>
    <string name="stg_app">Приложение</string>
    <string name="no_history">История временно недоступна</string>
    <string name="pin">Введите PIN</string>
    <string name="sum">Сумма (в сатоши)</string>
    <string name="address">Адрес</string>
    <string name="pin_oldpin">Введите старый PIN</string>
    <string name="pin_concoct">Придумайте PIN</string>
    <string name="pin_firstold">Сначала введите старый PIN</string>
    <string name="pin_protected">Теперь ваш кошелек защищен PIN-кодом</string>
    <string name="pin_deleted">PIN-код удален</string>
    <string name="pin_wrong">Неверный PIN-код</string>
    <string name="pin_correct">PIN-код введен верно, можете ввести новый</string>
    <string name="pin_enteredold">Вы ввели старый PIN</string>
    <string name="pin_changed_success">Вы успешно изменили PIN-код</string>
</resources>
