<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/create_new"
              android:textAlignment="center"
              android:textSize="24sp"
              android:id="@+id/textView2" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintHorizontal_bias="0.497"
              android:textColor="@color/colorPrimaryText" android:layout_marginTop="24dp"
              app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <EditText android:layout_width="match_parent" android:layout_height="50dp"
              android:hint="@string/login"
              android:id="@+id/etLogin"
              android:inputType="text"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              android:drawableStart="@drawable/ic_user"
              android:background="@drawable/edit_radius"
              android:paddingStart="15dp"
              android:drawablePadding="10dp"
              app:layout_constraintHorizontal_bias="1.0"
              android:layout_marginEnd="8dp"
              android:layout_marginBottom="15dp" app:layout_constraintBottom_toTopOf="@+id/etPassword"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="50dp"
              android:hint="@string/password"
              android:id="@+id/etPassword"
              android:color="#2f6699"
              android:inputType="textPassword"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginEnd="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintHorizontal_bias="0.0"
              android:background="@drawable/edit_radius"
              android:drawableStart="@drawable/ic_key"
              android:paddingStart="15dp"
              android:drawablePadding="10dp"
              style="@style/Widget.AppCompat.AutoCompleteTextView"
              app:layout_constraintBottom_toTopOf="@+id/etPasswordAgain" android:layout_marginBottom="15dp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="50dp"
              android:hint="@string/password2"
              android:id="@+id/etPasswordAgain"
              android:color="#2f6699"
              android:inputType="textPassword"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginEnd="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintHorizontal_bias="0.0"
              android:background="@drawable/edit_radius"
              android:drawableStart="@drawable/ic_key"
              android:paddingStart="15dp"
              android:drawablePadding="10dp"
              style="@style/Widget.AppCompat.AutoCompleteTextView"
              android:layout_marginBottom="15dp" app:layout_constraintBottom_toTopOf="@+id/btnSend"/>

    <Button
            android:text="@string/send"
            android:background="@drawable/bg_button"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSend"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnEnter"/>
    <Button
            android:text="@string/go_back"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
              android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEnter" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"

            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="141dp"
            android:layout_height="89dp" app:srcCompat="@drawable/ic_logo_purple"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>