<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
            android:text="@string/auth"
            android:background="@drawable/bg_button"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAuth" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/create_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <ImageView
            android:layout_width="120dp" android:layout_height="120dp"
            android:src="@drawable/ic_logo_purple"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView"/>
    <TextView
            android:text="@string/start_screen_desc"
            android:textColor="@color/colorDeepSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
            android:textAlignment="center" android:textSize="18sp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:fontFamily="@font/montserrat"/>

</android.support.constraint.ConstraintLayout>