<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".ui.StartActivity">

    <Button
            android:text="@string/auth"
            android:background="@drawable/bg_button"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/create_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:src="@drawable/ic_launcher_background"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
               android:layout_marginTop="128dp" app:layout_constraintTop_toTopOf="parent"
               android:id="@+id/imageView"/>
    <TextView
            android:text="@string/start_screen_desc"
            android:textColor="@color/colorDeepSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
            android:textAlignment="center" android:textSize="18sp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:fontFamily="@font/montserrat"/>

</android.support.constraint.ConstraintLayout>