<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:elevation="2dp"
                                                 android:background="@drawable/shape_white"
                                                 android:layout_height="wrap_content"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 android:layout_marginEnd="8dp"
                                                 android:layout_marginStart="8dp" android:id="@+id/constraintLayout2"
                                                 app:layout_constraintHorizontal_bias="0.0"
                                                 android:layout_marginTop="8dp"
                                                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">


        <TextView
                android:text="@string/stg_protect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="14sp" android:fontFamily="@font/product_medium" android:textAllCaps="true"/>
        <Switch
                android:text="@string/stg_pinenter"
                android:textColor="@color/colorDeepSpace"
                android:layout_width="match_parent"
                android:fontFamily="@font/product_regular"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:id="@+id/switch1" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:textSize="16sp"/>
        <Switch
                android:text="@string/stg_finger"
                android:textColor="@color/colorDeepSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:id="@+id/switch2" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/switch1"/>
        <TextView
                android:text="@string/stg_changepin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/colorPrimary"
                android:id="@+id/btnChangePin" android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch2"
                android:textSize="16sp" android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:elevation="2dp"
                                                 android:background="@drawable/shape_white"
                                                 android:layout_height="wrap_content"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                                                 app:layout_constraintHorizontal_bias="0.0"
                                                 android:layout_marginTop="8dp"
                                                 app:layout_constraintTop_toTopOf="parent"
                                                 android:id="@+id/constraintLayout3">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:paddingTop="10dp"
                                                     android:paddingBottom="10dp"
                                                     android:paddingEnd="16dp"
                                                     android:paddingStart="16dp"
                                                     android:clickable="true"
                                                     android:background="?attr/selectableItemBackground"
                                                     app:layout_constraintEnd_toEndOf="parent"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
                                                     app:layout_constraintBottom_toBottomOf="parent"
                                                     android:layout_marginBottom="16dp">

            <TextView
                    android:text="@string/stg_mail"
                    android:textColor="@color/colorDeepSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
                    android:textSize="16sp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="mail@mail.ru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEmail" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintHorizontal_bias="1.0" android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
        <TextView
                android:text="@string/stg_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="14sp" android:fontFamily="@font/product_medium" android:textAllCaps="true"
                android:id="@+id/textView5"/>

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:layout_marginTop="10dp"
                                                     app:layout_constraintTop_toBottomOf="@+id/textView5"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     app:layout_constraintEnd_toEndOf="parent"
                                                     android:paddingTop="10dp"
                                                     android:paddingBottom="10dp"
                                                     android:paddingEnd="16dp"
                                                     android:paddingStart="16dp"
                                                     android:clickable="true"
                                                     android:background="?attr/selectableItemBackground"
                                                     android:id="@+id/constraintLayout4">

            <TextView
                    android:text="@string/stg_login"
                    android:textColor="@color/colorDeepSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                    android:textSize="16sp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvUsername" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="1.0" android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:background="@drawable/shape_white"
                                                 android:elevation="2dp"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                                                 android:layout_marginTop="8dp"
                                                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
                android:text="@string/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textColor="@color/colorRed"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/btnLogout" android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent" android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/btnSupport"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/btn_support"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:textAlignment="viewStart"
                android:id="@+id/btnSupport" android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp" android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:text="@string/stg_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="14sp" android:fontFamily="@font/product_medium" android:textAllCaps="true"
                android:id="@+id/textView8"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvVersion" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogout" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>